# ClParser

./: CMakeLists.txt  clparser.hpp
include/clparser/: Parser.hpp
include/modules/: ClCommand.hpp  ClLists.hpp  ClOption.hpp  ClParser.hpp  ClPosArg.hpp
include/modules/parent/: commandFunctionality.hpp  generalFunctionality.hpp  optionHandleFunctionality.hpp  posArgHandleFunctionality.hpp
include/modules/utility/: ClCommandPreDef.hpp  helperFunctions.hpp
src/: Parser.cpp
src/modules/: ClOption.cpp  ClParser.cpp
src/modules/parent/: commandFunctionality.cpp  generalFunctionality.cpp  optionHandleFunctionality.cpp  posArgHandleFunctionality.cpp
src/modules/utility/: helperFunctions.cpp
tests/: CMakeLists.txt  test1.cpp
